side effect, both --content-type and --encoding now affect the message
body read from the standard input as well.

** New variable 'mime'

The 'mime' variable, if set instructs mail to compose output messages
in MIME format.  In fact, the '--mime' option is equivalent to
'-E set mime', except that it takes effect after all options are
processed.

** New option --alternative

When used with --attach or --attach-fd options, this option sets the
Content-Type of the constructed message to "multipart/alternative".
In the absense of this option, the type is "multipart/mixed".

** New escape ~/

New escape ~/ toggles the Content-Type of the message being composed
between "multipart/mixed" and "multipart/alternative".

The actual Content-Type is displayed by the ~l (list attachments) escape.

* scheme implementation of the Sieve language discontinued

There's no reason to keep two different implementations of the Sieve
language within the same package.  The principal implementation
(libmu_sieve) is faster, much more advanced and rich in features than
the implementation in Scheme.  The decision has therefore been taken to
discontinue the latter and to concentrate all efforts on the further
development of the former.


Version 3.2 - 2017-03-11

* configuration syntax

Statements that allow for variable substitution also allow for command
expansion.  Commands are invoked the same way as in shell:

   $(command [args...])

The following commands are defined:

 - localpart X
     Treats X as an email address and returns its part preceding
     the @-sign.  If there is no @-sign, returns X unchanged.

 - domainpart X
     Treats X as an email address and returns the part following
     the @-sign.  If there is no @-sign, returns empty string.

 - shell CMD [ARGS...]
     Runs the shell command CMD with the given arguments.  Returns
     the standard output from the command.  The command is invoked
     using "/bin/sh -c" and can contain any valid shell construct.

* imap4d
